--- a/passwordmanager/pom.xml
+++ b/passwordmanager/pom.xml
@@ -31,32 +31,33 @@
 	</properties>
 	<dependencies>
 
-		<dependency>
+		<!--dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<version>7.0.2.Final</version>
 			<type>pom</type>
-		</dependency>
+		</dependency-->
 
 
-		<dependency>
+		<!--dependency>
 			<groupId>jakarta.persistence</groupId>
 			<artifactId>jakarta.persistence-api</artifactId>
 			<version>3.2.0</version>
-		</dependency>
+		</dependency-->
 
 
-		<dependency>
+		<!--dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<version>3.5.3</version>
-		</dependency>
+		</dependency-->
 
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<version>3.5.3</version>
+			<optional>true</optional>
 		</dependency>
 
 
@@ -81,10 +82,10 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
-		<!--<dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>-->
+		</dependency>
 		
 		<dependency>
 			<groupId>com.h2database</groupId>
