--- a/passwordmanager/pom.xml
+++ b/passwordmanager/pom.xml
@@ -31,27 +31,11 @@
 	</properties>
 	<dependencies>
 
-		<!--dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
-			<version>7.0.2.Final</version>
-			<type>pom</type>
-		</dependency-->
-
-
-		<!--dependency>
-			<groupId>jakarta.persistence</groupId>
-			<artifactId>jakarta.persistence-api</artifactId>
-			<version>3.2.0</version>
-		</dependency-->
-
-
-		<!--dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<version>3.5.3</version>
-		</dependency-->
-
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -59,7 +43,6 @@
 			<version>3.5.3</version>
 			<optional>true</optional>
 		</dependency>
-
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
